# Work

./: Tesst.py  h origin main
130254113-main/: Newgame.py  newgame1.py
DSA/Fibonacci_Sequence/: conceptualisation.py
DSA/Hashmaps/: Ex1.py  retrieving_data.py
DSA/Queues/: dequeue.py
DSA/dynamic_array/: mechanics_of.py  other_operations.py
Doubly_Linked_List/: deletion.py  insertion.py
Factorial/: iteration_&_recursion.py  recursion_1_branch.py
Hashmaps/: 49.py  49_alternative.py  Ex2.py  retrieving_data_Ex1.py
InsertionSort/: concept.py
Leetcode/: 1472.py  155.py  1700.py  20.py  206(Iterative).py  206(recursive).py  206(recurvsive).py  225.py  26.py  27.py  278.py  374.py  49.py  682.py  704.py  707.py  74.py  912.py  problemlist.py  test.py
LinkedList/: appending.py  creating_from_scratch.py  deleting_from.py  traversal.py
Management Science/: Ver1.py  Ver2.py  Ver3.py
MultiVariateLinear-Assignment1/: step2_data_prep.ipynb  step3_eda_notebook.ipynb  step4_dim_reduction_notebook.ipynb  step5_clustering_notebook_visual.ipynb  step6_clean.ipynb  step7_robustness.ipynb
OOD/: connect4.py
PacketMonitor/: Makefile  README.md  import random.py  log.txt
PacketMonitor/tests/: CMakeLists.txt  test_AnomalyDetector.cpp  test_SignatureDetector.cpp  test_Utils.cpp
Q1/: N2.out  N3.out  solve.py
Queues/: enqueue.py
dynamic_array/: mechanics_of.py
stacks/: peek.py
wincent/: B3.out  K1.out  R2.out  T1.out  T2.out  rooks_r2  rooks_r2.cpp  solution.py
wincent2/: H1.out  P1.out  W1.out  W2.out  W3.out  W4.out  maze.out  p2.out  solution.py  solution2.py  solution3.py
(+131 files in other folders)
